--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.7.3",
     "formik": "^2.4.6",
     "next": "15.3.0",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
